@@ -1,3 +1,4 @@
+
 %%%----------------------------------------------------------------------
 %%% File    : mod_vcard_ldap.erl
 %%% Author  : Alexey Shchepin <alexey@sevcom.net>
@@ -340,7 +341,7 @@ do_route(ServerHost, From, To, Packet) ->
 				IQ#iq{type = result,
 				      sub_el = [{xmlelement,
 						 "query",
-						 [{"xmlns", ?NS_DISCO_INFO}],
+						 [{"xmlns", ?NS_DISCO_ITEMS}],
 						 []}]},
 			    ejabberd_router:route(To,
 						  From,
