@@ -1,5 +1,10 @@
 2005-11-19  Alexey Shchepin  <alexey@sevcom.net>
 
+	* src/mod_vcard.erl: Fixed xmlns in disco items replies (thanks to
+	Maxim Ryazanov)
+	* src/mod_vcard_ldap.erl: Likewise
+	* src/mod_vcard_odbc.erl: Likewise
+
 	* src/tls/Makefile.in: Use CPPFLAGS (thanks to Magnus Henoch)
 
 2005-11-17  Alexey Shchepin  <alexey@sevcom.net>
